made some changes related to product add

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 
 # Database
-DATABASE_URL='postgresql://neondb_owner:npg_v5p4ifKNGuFm@ep-curly-shape-aer058js-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DATABASE_URL='postgresql://neondb_owner:npg_6PAuSteZ9iIh@ep-gentle-unit-a8r7v04p-pooler.eastus2.azure.neon.tech/neondb?sslmode=require&channel_binding=require'
 # JWT Secret
 JWT_SECRET="your-super-secret-jwt-key-here"
 
